force-app/main/default/objects/Test_Drive__c/fields/DL_Number__c.field-meta.xml
<CustomField>
    <fullName>DL_Number__c</fullName>
    <label>DL Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>