force-app/main/default/objects/Test_Drive__c/fields/DL_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>DL_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DL Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Drives (DL Verified)</relationshipLabel>
    <relationshipName>Test_Drives_DL_Verified</relationshipName>
    <type>Lookup</type>
</CustomField>