force-app/main/default/objects/Test_Drive__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Drive user</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Test Drive</relationshipLabel>
    <relationshipName>Test_Drive</relationshipName>
    <type>Lookup</type>
</CustomField>