force-app/main/default/objects/Test_Drive__c/fields/Slot_Label__c.field-meta.xml
<CustomField>
    <fullName>Slot_Label__c</fullName>
    <label>Slot Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>