force-app/main/default/objects/Test_Drive__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending DL Verification</fullName>
            </value>
            <value>
                <fullName>DL Verified</fullName>
            </value>
            <value>
                <fullName>Pending DL</fullName>
            </value>
            <value>
                <fullName>Test Drive Scheduled</fullName>
            </value>
            <value>
                <fullName>Test Drive In progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>DL Verification Failed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Inprogress</fullName>
                <isActive>false</isActive>
                <label>Inprogress</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>