force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Time__c</fullName>
    <formula>TIMEVALUE(Test_Drive_Date_Time__c) - (7 * 60 * 60 * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Drive Time</label>
    <type>Time</type>
</CustomField>