force-app/main/default/objects/Test_Drive__c/fields/VDA__c.field-meta.xml
<CustomField>
    <fullName>VDA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VDA</label>
    <referenceTo>VehicleDef_Dealer__c</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>VDA_Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>