force-app/main/default/objects/Test_Drive__c/listViews/Test_Drive_Requests_Queue_Test_Drive.listView-meta.xml
<ListView>
    <fullName>Test_Drive_Requests_Queue_Test_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Dealer Queue</label>
    <queue>Test_Drive_Requests_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>