force-app/main/default/objects/Test_Drive__c/listViews/Verification_Queue_Test_Drive.listView-meta.xml
<ListView>
    <fullName>Verification_Queue_Test_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Verification Queue</label>
    <queue>Verification_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>